Add swager info for part user method
